--- a/src/components/layout/pageWrapper.module.css
+++ b/src/components/layout/pageWrapper.module.css
@@ -1,14 +1,16 @@
-.page-wrapper__main {
+.pageWrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
-    max-width: 1366px;
-    margin: 0 auto;
-    padding: 0 80px;
+    min-height: 100vh;
+    overflow-x: hidden;
     background-image: url("../../assets/Pattern.jpg");
     background-repeat: repeat;
     background-color: black;
   }
   
+  main {
+    flex-grow: 1;
+  }
