--- a/src/index.css
+++ b/src/index.css
@@ -16,18 +16,14 @@
   font-display: swap;
 }
 
-html {
-  height: 100%;
-}
-
 body,
 html {
   margin: 0;
+  padding: 0;
+  min-height: 100vh;
 }
 
-body {
-  min-height: 100vh;
-  position: relative;
+html {
   font-family: 'Exo 2','Arial', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -35,4 +31,11 @@ body {
   font-size: 36px;
   line-height: 44px;
   color: #ffffff;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+
+  background-color: #000000;
 }
