--- a/src/components/layout/pageWrapper.module.css
+++ b/src/components/layout/pageWrapper.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 35px 0;
     width: 100%;
     min-height: 100vh;
     overflow-x: hidden;
